--- a/roles/frps/tasks/main.yml
+++ b/roles/frps/tasks/main.yml
@@ -1,4 +1,33 @@
 ---
+- name: Upgrade pip
+  ansible.builtin.pip:
+    name: pip
+    extra_args: --upgrade
+- name: Install requirements
+  ansible.builtin.pip:
+    name: pyOpenSSL
+- name: Create ssl subdirectory in etc
+  ansible.builtin.file:
+    path: "/etc/ssl/{{ item }}"
+    state: directory
+  loop:
+    - crt
+    - private
+    - csr
+- name: Generate an ssl private key
+  community.crypto.openssl_privatekey:
+    path: "/etc/ssl/private/{{ domain }}.pem"
+- name: Generate an ssl certificate signing request
+  community.crypto.openssl_csr:
+    path: "/etc/ssl/csr/{{ domain }}.csr"
+    privatekey_path: "/etc/ssl/private/{{ domain }}.pem"
+    common_name: "{{ domain }}"
+- name: Generate a self signed ssl certificate
+  openssl_certificate:
+    path: "/etc/ssl/crt/{{ domain }}.crt"
+    privatekey_path: "/etc/ssl/private/{{ domain }}.pem"
+    csr_path: "/etc/ssl/csr/{{ domain }}.csr"
+    provider: selfsigned
 - name: Download frp
   ansible.builtin.unarchive:
     src: https://github.com/fatedier/frp/releases/download/v0.51.2/frp_0.51.2_linux_amd64.tar.gz
